--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
 # Compiled class file
 *.class
+*.iml
+.allure
 
 # Log file
 *.log
+*.iml
+.allure
 
 # BlueJ files
 *.ctxt
+*.iml
+.allure
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.iml
+.allure
 
 # Package Files #
 *.jar
@@ -18,6 +26,14 @@
 *.zip
 *.tar.gz
 *.rar
+*.iml
+.allure
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/
+target/
+build/
+.allure/
+allure-results/
+*.iml
